Fix: 절대경로를 상대경로로 수정

--- a/individual-application.html
+++ b/individual-application.html
@@ -612,7 +612,7 @@
             <div class="nav-item">
                 <img src="./image/profile.png" alt="프로필">
             </div>
-            <div class="nav-item" onclick="location.href='/landing.html'">
+            <div class="nav-item" onclick="location.href='./landing.html'">
                 <img src="./image/logout.png" alt="로그아웃">
             </div>
         </div>
