--- a/mentoring-application.html
+++ b/mentoring-application.html
@@ -918,7 +918,7 @@
 </head>
 <body>
     <header>
-        <div class="logo" onclick="location.href='/home-mentee.html'">
+        <div class="logo" onclick="location.href='./home-mentee.html'">
             <img src="./image/symbol.png" alt="이음 로고" style="width: 40px; height: 40px; margin-right: 10px;">
             <span class="logo-text"> [ 이;음 ] - 사람을 잇다 </span>
         </div>
@@ -932,7 +932,7 @@
             <div class="nav-item">
                 <img src="./image/profile.png" alt="프로필">
             </div>
-            <div class="nav-item" onclick="location.href='/landing.html'">
+            <div class="nav-item" onclick="location.href='./landing.html'">
                 <img src="./image/logout.png" alt="로그아웃">
             </div>
         </div>
@@ -972,10 +972,10 @@
                 <div class="sidebar-period">(2025. 9. 15~ 9. 19.)</div>
             </div>
             <div class="sidebar-menu">
-                <div class="sidebar-item" onclick="location.href='/notice.html'">Notice</div>
-                <div class="sidebar-item" onclick="location.href='/mentor-schedule.html'">멘토 스케줄</div>
-                <div class="sidebar-item active" onclick="location.href='/mentoring-application.html'">멘토링 신청</div>
-                <div class="sidebar-item" onclick="location.href='/mentoring-status.html'">신청내역 열람/취소</div>
+                <div class="sidebar-item" onclick="location.href='./notice.html'">Notice</div>
+                <div class="sidebar-item" onclick="location.href='./mentor-schedule.html'">멘토 스케줄</div>
+                <div class="sidebar-item active" onclick="location.href='./mentoring-application.html'">멘토링 신청</div>
+                <div class="sidebar-item" onclick="location.href='./mentoring-status.html'">신청내역 열람/취소</div>
             </div>
         </div>
         
