--- a/mypage-mentee.html
+++ b/mypage-mentee.html
@@ -644,7 +644,7 @@
 </head>
 <body>
     <header>
-        <div class="logo" onclick="location.href='/home-mentee.html'">
+        <div class="logo" onclick="location.href='./home-mentee.html'">
             <img src="./image/symbol.png" alt="이음 로고" style="width: 40px; height: 40px; margin-right: 10px;">
             <span class="logo-text"> [ 이;음 ] - 사람을 잇다 </span>
         </div>
@@ -658,7 +658,7 @@
             <div class="nav-item">
                 <img src="./image/profile.png" alt="프로필">
             </div>
-            <div class="nav-item" onclick="location.href='/landing.html'">
+            <div class="nav-item" onclick="location.href='./landing.html'">
                 <img src="./image/logout.png" alt="로그아웃">
             </div>
         </div>
