Fix: update form action to use absolute path for home-mentee.html

--- a/register.html
+++ b/register.html
@@ -388,7 +388,8 @@
             <h2 class="form-title"></h2>
             
             <!-- 로그인 폼 -->
-            <form action="./home-mentee.html">
+            <!-- <form action="./home-mentee.html"> -->
+            <form action="/Ieum-Publishing/home-mentee.html"></form>
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="이름">
                 </div>
