Fix: update navigation links to use relative paths for consistency

--- a/individual-application.html
+++ b/individual-application.html
@@ -609,7 +609,7 @@
             <div class="nav-item" onclick="location.href='http://pf.kakao.com/_pVCxen'">
                 <img src="./image/kakaotalk-channel.jpg" alt="카카오톡 채널">
             </div>
-            <div class="nav-item">
+            <div class="nav-item" onclick="location.href='./mypage-mentee.html'">
                 <img src="./image/profile.png" alt="프로필">
             </div>
             <div class="nav-item" onclick="location.href='./landing.html'">
@@ -623,19 +623,19 @@
     
     <!-- 모바일 내비게이션 -->
     <div class="mobile-nav">
-        <div class="mobile-nav-item">
+        <div class="mobile-nav-item" onclick="location.href='https://cafe.naver.com/ieum365'">
             <img src="./image/naver-cafe.png" alt="네이버 카페">
             <span class="mobile-nav-text">네이버 카페</span>
         </div>
-        <div class="mobile-nav-item">
+        <div class="mobile-nav-item" onclick="location.href='http://pf.kakao.com/_pVCxen'">
             <img src="./image/kakaotalk-channel.jpg" alt="카카오톡 채널">
             <span class="mobile-nav-text">카카오톡 채널</span>
         </div>
-        <div class="mobile-nav-item">
+        <div class="mobile-nav-item" onclick="location.href='./mypage-mentee.html'">
             <img src="./image/profile.png" alt="프로필">
             <span class="mobile-nav-text">프로필</span>
         </div>
-        <div class="mobile-nav-item">
+        <div class="mobile-nav-item" onclick="location.href='./landing.html'">
             <img src="./image/logout.png" alt="로그아웃">
             <span class="mobile-nav-text">로그아웃</span>
         </div>
