--- a/register.html
+++ b/register.html
@@ -389,7 +389,7 @@
             
             <!-- 로그인 폼 -->
             <!-- <form action="./home-mentee.html"> -->
-            <form action="/Ieum-Publishing/home-mentee.html"></form>
+            <form action="/Ieum-Publishing/home-mentee.html">
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="이름">
                 </div>
