Fix: update logo div to navigate to home-mentee.html using a relative path

--- a/group-application.html
+++ b/group-application.html
@@ -741,7 +741,7 @@
 </head>
 <body>
     <header>
-        <div class="logo" onclick="location.href='/home-mentee.html'">
+        <div class="logo" onclick="location.href='./home-mentee.html'">
             <img src="./image/symbol.png" alt="이음 로고" style="width: 40px; height: 40px; margin-right: 10px;">
             <span class="logo-text"> [ 이;음 ] - 사람을 잇다 </span>
         </div>
