Fix: update profile and logout image links to use relative paths for consistency

--- a/group-application.html
+++ b/group-application.html
@@ -753,10 +753,10 @@
                 <img src="./image/kakaotalk-channel.jpg" alt="카카오톡 채널">
             </div>
             <div class="nav-item">
-                <img src="./image/profile.png" alt="프로필" onclick="location.href='/mypage-mentee.html'">
+                <img src="./image/profile.png" alt="프로필" onclick="location.href='./mypage-mentee.html'">
             </div>
             <div class="nav-item">
-                <img src="./image/logout.png" alt="로그아웃" onclick="location.href='/landing.html'">
+                <img src="./image/logout.png" alt="로그아웃" onclick="location.href='./landing.html'">
             </div>
         </div>
         <div class="hamburger-menu">
